--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ header {
     font-size: 1.6rem;
   }
 }
-
+/* 
 @media screen and (max-width: 1200px) {
   body {
     font-size: 1.4rem;
@@ -121,4 +121,4 @@ header {
   body {
     font-size: 0.8rem;
   }
-}
+} */
