--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,6 @@
   /* transition: all 0.2s linear; */
 }
 
-/* html {
-  font-size: 62.5%;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-} */
-
 body {
   background: #f7f7f7;
   font-family: "Poppins", sans-serif;
@@ -62,6 +56,7 @@ header {
 }
 
 /* ... (your existing styles) */
+
 /* Media Queries */
 @media screen and (max-width: 1600px) {
   body {
@@ -74,7 +69,7 @@ header {
     font-size: 1.6rem;
   }
 }
-/* 
+
 @media screen and (max-width: 1200px) {
   body {
     font-size: 1.4rem;
@@ -121,4 +116,4 @@ header {
   body {
     font-size: 0.8rem;
   }
-} */
+}
