--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 /* styles.css */
 * {
-  margin: 0;
+  margin: 15px;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
   outline: none;
   border: none;
   text-transform: capitalize;
+ 
   /* transition: all 0.2s linear; */
 }
 
@@ -16,7 +17,7 @@ body {
 }
 
 *::selection {
-  background: #ec07ca;
+  background: #292729;
   color: #fff;
 }
 
@@ -26,7 +27,8 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin-bottom: 50px; /* Add margin at the bottom */
+  margin-bottom: 50px;
+  width: 100%; /* Add margin at the bottom */
 }
 
 /* Center the containers */
