--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -8,6 +8,7 @@
     gap: 1.5rem;
     min-height: 100vh;
     align-items: center;
+    width: 100%;
   }
   
   
@@ -26,7 +27,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2rem;
+    padding: 73px 2rem;
   }
   
   .image {
@@ -120,7 +121,7 @@
     
 
   .resumebtn button {
-    width: 176px;
+    width: 231px;
     height: 45px;
     padding: 12px 40px;
     align-items: flex-start;
