--- a/src/App.css
+++ b/src/App.css
@@ -55,10 +55,10 @@ header {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1000; /* Make sure Navbar stays on top */
 }
-
+/*
 /* Media Queries */
-@media (max-width: 768px) {
-  /* Adjust margins and paddings for smaller screens */
+/* @media (max-width: 768px) {
+ 
   * {
     margin: 4px;
     padding: 1px;
@@ -73,8 +73,8 @@ header {
     margin: 0.5rem;
   }
 
-  /* Add responsive styles for the sticky Navbar */
+ 
   header {
     padding: 15px 20px;
   }
-}
+} */
