--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,8 @@ header {
 }
 /*
 /* Media Queries */
-/* @media (max-width: 768px) {
+
+@media screen and (max-width: 768px)  {
  
   * {
     margin: 4px;
@@ -77,4 +78,4 @@ header {
   header {
     padding: 15px 20px;
   }
-} */
+}
