--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -177,34 +177,24 @@
   }
 }
 
-/* Media Queries for Mobile Screens (up to 600px) */
-@media screen and (max-width: 768px) {
+
+@media (max-width: 900px) {
   .contact {
     min-height: 70vh;
   }
-  
   .contact .container {
     margin: 3rem 0 2rem 0;
   }
-
   .contact .container .content {
     padding: 18px 12px;
   }
-
   .contact .content .image-box {
     display: none;
   }
-
   .contact .content form {
     width: 100%;
     margin-right: 2rem;
   }
-
-  .form {
-    position: relative;
-    right: 20%;
-  }
 }
-
   /* contact section media queries ends */
   /* contact section ends */
