--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -51,7 +51,8 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-  
+    flex-wrap: wrap;
+    flex: 1 1 70rem;
   }
   .education .box-container .box .content h3 {
     font-size: 2.5rem;
