--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,21 @@
 /* styles.css */
 * {
-  margin: 6px;
-  padding: 2px;
   box-sizing: border-box;
   text-decoration: none;
   outline: none;
   border: none;
   text-transform: capitalize;
+  margin: 0;
+
   /* transition: all 0.2s linear; */
 }
 
 body {
   background: #f7f7f7;
   font-family: "Poppins", sans-serif;
+  /* margin: 0;
+  padding: 0; */
+ 
 }
 
 *::selection {
